# CorgiDS

./: .clangd  .gitignore  meson.build
corgi-rs/: Cargo.toml
corgi-rs/src/: bios.rs  cp15.rs  emu_window.rs  emulator.rs  emuthread.rs  firmware.rs  gpu3d.rs  gpueng.rs  interrupts.rs  lib.rs  main.rs  touchscreen.rs
corgids-release/: corgids
docs/: EMU_DESIGN.md  EMU_IMPL.md  fn_block.drawio  phase_flow.drawio
src/: FreeBIOS.cpp  FreeBIOS.h  emulator.cpp  firmware.cpp  firmware_dust.cpp  firmware_dust.h
